Additional divs for frontpage and a footer

--- a/FrontPage.html
+++ b/FrontPage.html
@@ -7,7 +7,34 @@
 </head>
 <body>
 
-<div id="header"><img href="img/logo"><label id="headerText">VIA Fit</label> </div>
+<div id="header">
+    <img href="img/logo"><label id="headerText">VIA Fit</label>
+</div>
+<div class="bodyHalf">
+
+</div>
+<div class="bodyHalf">
+    <div class="quarter">
+
+    </div>
+    <div class="quarter">
+
+    </div>
+    <div class="quarter">
+
+    </div>
+    <div class="quarter">
+
+    </div>
+</div>
+
+<div id="Footer">
+    <div class="footBox">
+        <p class="footText">About us</p>
+        <p class="footText">More information</p>
+        <p class="footText">Activities</p>
+    </div>
+</div>
 
 </body>
 </html>
