--- a/About.html
+++ b/About.html
@@ -6,6 +6,9 @@
     <link type="text/css" href="Styles.css" rel="stylesheet" >
 </head>
 <body>
+<div id="header">
+    <img href="img/logo"><a id="headerText">VIA Fit</a>
+</div>
 
 </body>
 </html>
