--- a/Info.html
+++ b/Info.html
@@ -6,6 +6,9 @@
     <link type="text/css" href="Styles.css" rel="stylesheet" >
 </head>
 <body>
+<div id="header">
+    <img href="img/logo"><label id="headerText">VIA Fit</label>
+</div>
 
 </body>
 </html>
