Footer witdh removed

--- a/FrontPage.html
+++ b/FrontPage.html
@@ -31,9 +31,9 @@
 
 <div id="Footer">
     <div class="footBox">
-        <a class="footText" class="footText" href = About.html>About us</a>
-        <a class="footText" class="footText" href = Info.html>More information</a>
-        <a class="footText" class="footText" href="Activities.html">Activities</a>
+        <a class="footText" class="footText" href = About.html>About us<br></a>
+        <a class="footText" class="footText" href = Info.html>More information<br></a>
+        <a class="footText" class="footText" href="Activities.html">Activities<br></a>
     </div>
 </div>
 
