Footer facebook link added

--- a/FrontPage.html
+++ b/FrontPage.html
@@ -40,6 +40,7 @@
 
 <div id="Footer">
     <div class="footBox">
+        <a class="footText" href="_blank">Find us on Facebook</a>
     </div>
 </div>
 
