--- a/Info.html
+++ b/Info.html
@@ -5,10 +5,26 @@
     <title>Information</title>
     <link type="text/css" href="Styles.css" rel="stylesheet" >
 </head>
-<body>
+<body style="background-image:">
 <div id="header">
     <img href="img/logo"><label id="headerText">VIA Fit</label>
 </div>
+<div id="Contact" style="float: left">
+    <ul>
+        <p> Kontakt information:</p>
+
+        <p >Jonas   27883920</p>
+        <p> Sebastian  29987772</p>
+        <p> Morten     26335211</p>
+
+    </ul>
+
+</div>
+
+    <img src="img/træningsbillede1.jpg" alt="Træningsbillede" style="width: 100%"height="100%" >
+
+
+
 
 </body>
 </html>
