changes to Activities

--- a/Activities.html
+++ b/Activities.html
@@ -9,6 +9,82 @@
 <div id="header">
     <img href="img/logo"><label id="headerText">VIA Fit</label>
 </div>
+    <table>
+        <tr>
+            <th></th>
+            <th>Monday</th>
+            <th>Tuesday</th>
+            <th>Wednesday</th>
+            <th>Thursday</th>
+            <th>Friday</th>
+            <th>Saturday</th>
+            <th>Sunday</th>
+        </tr>
+        <tr>
+            <td>13.00-15.00</td>
+            <td class="fullbody">Full-body</td>
+            <td class="cardio">Cardio</td>
+            <td class="strength">Strength</td>
+            <td class="X-fit">X-fit</td>
+            <td class="strength">Strength</td>
+            <td class="X-fit">X-fit</td>
+            <td class="X-fit">X-fit</td>
+        </tr>
+        <tr>
+            <td>15.00-17.00</td>
+            <td class="cardio">Cardio</td>
+            <td class="fullbody">Full-body</td>
+            <td class="X-fit">X-fit</td>
+            <td class="strength">Strength</td>
+            <td class="X-fit">X-fit</td>
+            <td class="strength">Strength</td>
+            <td class="X-fit">X-fit</td>
+        </tr>
+        <tr>
+            <td>17.00-18.30</td>
+            <td class="X-fit">X-fit</td>
+            <td class="strength">Strength</td>
+            <td class="cardio">Cardio</td>
+            <td class="fullbody">Full-body</td>
+            <td class="strength">Strength</td>
+            <td class="X-fit">X-fit</td>
+            <td class="strength">Strength</td>
+        </tr>
+        <tr>
+            <td>18.30-20.00</td>
+            <td class="strength">Strength</td>
+            <td class="X-fit">X-fit</td>
+            <td class="fullbody">Full-body</td>
+            <td class="cardio">Cardio</td>
+            <td class="fullbody">Full-body</td>
+            <td class="X-fit">X-fit</td>
+            <td class="strength">Strength</td>
+        </tr>
+        <tr>
+            <td>20.00-21.00</td>
+            <td class="X-fit">X-fit</td>
+            <td class="fullbody">Full-body</td>
+            <td class="cardio">Cardio</td>
+            <td class="X-fit">X-fit</td>
+            <td class="cardio">Cardio</td>
+            <td class="cardio">Cardio</td>
+            <td class="cardio">Cardio</td>
+        </tr>
+        <tr>
+            <td>21.00-22.00</td>
+            <td class="fullbody">Full-body</td>
+            <td class="X-fit">X-fit</td>
+            <td class="strength">Strength</td>
+            <td class="cardio">Cardio</td>
+            <td class="X-fit">X-fit</td>
+            <td class="strength">Strength</td>
+            <td class="cardio">Cardio</td>
+        </tr>
+
+
+
+
+
 
 </body>
 </html>
