changes to links

--- a/Activities.html
+++ b/Activities.html
@@ -89,9 +89,15 @@
             <td class="strength">Strength</td>
             <td class="cardio">Cardio</td>
         </tr>
+    </table>
 
-
-
+        <div id="Footer">
+            <div class="footBox">
+                <a class="footText" href="https://www.facebook.com/" target="_blank">Find us on Facebook</a>
+                <br>
+                <a class="footText" href="https://twitter.com/" target="_blank">Find us on Twitter</a>
+            </div>
+        </div>
 
 
 
