--- a/FrontPage.html
+++ b/FrontPage.html
@@ -40,7 +40,9 @@
 
 <div id="Footer">
     <div class="footBox">
-        <a class="footText" href="_blank">Find us on Facebook</a>
+        <a class="footText" href="https://www.facebook.com/" target="_blank">Find us on Facebook</a>
+        <br>
+        <a class="footText" href="https://twitter.com/" target="_blank">Find us on Twitter</a>
     </div>
 </div>
 
