--- a/Info.html
+++ b/Info.html
@@ -18,6 +18,8 @@
         <a class="headerNavText" href="Activities.html">Activities</a>
     </div>
 </div>
+
+
 <div id="Contact" style="float: left">
     <ul>
         <p> Kontakt information:</p>
@@ -29,8 +31,8 @@
     </ul>
 
 </div>
-
-    <img src="img/træningsbillede1.jpg" alt="Træningsbillede" style="width: 100%"height="100%" >
+<div> <img src="img/træningsbillede1.jpg" alt="Træningsbillede" style="width: 100%"height="100%" >
+</div>
 
 
 
