--- a/FrontPage.html
+++ b/FrontPage.html
@@ -25,22 +25,22 @@
 
 <div class="bodyHalf">
     <div class="quarter">
-
+    <img src="img/cardio.jpg" alt="cardio training" style="width:100%;height:200px;">
     </div>
     <div class="quarter">
-
+    <img src="img/FullBody.jpg" alt="fullbody training" style="width:100%;height:200px;">
     </div>
     <div class="quarter">
-
+    <img src="img/Strength.jpg" alt="strength training" style="width:100%;height:200px;">
     </div>
     <div class="quarter">
-
+    <img src="img/Xfit.jpg" alt="Crossfit training" style="width:100%;height:200px;">
     </div>
 </div>
 
 <div id="Footer">
     <div class="footBox">
-        <a class="footText" href="https://www.facebook.com/" target="_blank">Find us on Facebook</a>
+        <a class="footText"  target="_blank">Find us on Facebook</a>
         <br>
         <a class="footText" href="https://twitter.com/" target="_blank">Find us on Twitter</a>
     </div>
