--- a/Info.html
+++ b/Info.html
@@ -18,18 +18,20 @@
         <a class="headerNavText" href="Activities.html">Activities</a>
     </div>
 </div>
+<div style="clear: both">
 
+    <h2 style="text-align:center">
+    Kundeservice
+    </h2>
+ </div>
 
-<div id="Contact" style="float: left">
-    <ul style="font-family: helvetica" >
-        <p> Kontakt information:</p>
+<div style="background-image: url("img/træningsbillede1.jpg")>
 
-        <p >Jonas   27883920</p>
-        <p> Sebastian  29987772</p>
-        <p> Morten     26335211</p>
-
-    </ul>
 </div>
+
+
+
+
 
 
 <div id="Footer">
