--- a/FrontPage.html
+++ b/FrontPage.html
@@ -35,15 +35,12 @@
     </div>
     <div class="quarter">
     <img src="img/Xfit.jpg" alt="Crossfit training" style="width:100%;height:100%;">
-=======
-    <img src="img/Xfit.jpg" alt="Crossfit training" style="width:100%;height:203.6px;">
->>>>>>> 67a76159442774f7ce6370430e507ba087135f36
     </div>
 </div>
 
 <div id="Footer">
     <div class="footBox">
-        <a class="footText"  target="_blank">Find us on Facebook</a>
+        <a class="footText" href="https://www.facebook.com/" target="_blank">Find us on Facebook</a>
         <br>
         <a class="footText" href="https://twitter.com/" target="_blank">Find us on Twitter</a>
     </div>
