changes to footer and about us

--- a/About.html
+++ b/About.html
@@ -19,5 +19,13 @@
     </div>
 </div>
 
+<div id="Footer">
+    <div class="footBox">
+        <a class="footText" href="https://www.facebook.com/" target="_blank">Find us on Facebook</a>
+        <br>
+        <a class="footText" href="https://twitter.com/" target="_blank">Find us on Twitter</a>
+    </div>
+</div>
+
 </body>
 </html>
