--- a/About.html
+++ b/About.html
@@ -18,6 +18,36 @@
         <a class="headerNavText" href="Activities.html">Activities</a>
     </div>
 </div>
+<div class="bodyHalf">
+    <div id="aboutdiv">
+        <br>
+        <h1>About us</h1>
+        <br>
+        <p>ViaFit is a fitness center made and maintained by <b>students</b> at Via-Horsens.</p>
+        <p>location of the fitness center is  <b>Chr. M Østergaards Vej 4 8700 Horsens</b></p>
+        <p>ViaFit is open <b>24/7</b> and you can get access to the center with your Via Student card once you´ve signed up and payed!</p>
+        <p>ViaFit have different teams that you can join for free and you can join more than one team.</p>
+        <p>ViaFit offers <b>Cardio,X-fit, fullbody</b> and <b>strength</b> on a timed schedule from monday through sunday, you can find more information about it under <a href="Activities.html">Activities</a></p>
+        <p>If you need more information click <a href="Info.html">here</a>.</p>
+
+    </div>
+</div>
+
+<div class="bodyHalf">
+    <div class="quarter">
+        <img src="img/fitnessGym.jpg" alt="the gym inside" style="width:100%;height:203.6px;">
+    </div>
+    <div class="quarter">
+        <img src="img/morningWorkout.jpg" alt="schedule for morning workout" style="width:100%;height:203.6px;">
+    </div>
+    <div class="quarter">
+        <img src="img/ViaFit.jpg" alt="location of the center" style="width:100%;height:203.6px;">
+    </div>
+    <div class="quarter">
+        <img src="img/workoutSchedule.jpg" alt="a schedule for your workout" style="width:100%;height:203.6px;">
+    </div>
+</div>
+
 
 <div id="Footer">
     <div class="footBox">
