--- a/FrontPage.html
+++ b/FrontPage.html
@@ -34,7 +34,7 @@
     <img src="img/Strength.jpg" alt="strength training" style="width:100%;height:203.6px;">
     </div>
     <div class="quarter">
-    <img src="img/Xfit.jpg" alt="Crossfit training" style="width:100%;height:100%;">
+    <img src="img/Xfit.jpg" alt="Crossfit training" style="width:100%;height:203.6px;">
     </div>
 </div>
 
