--- a/FrontPage.html
+++ b/FrontPage.html
@@ -25,19 +25,16 @@
 
 <div class="bodyHalf">
     <div class="quarter">
-    <img src="img/cardio.jpg" alt="cardio training" style="width:100%;height:203.6px;">
+        <img src="img/cardio.jpg" alt="cardio training" class="quarterImg">
     </div>
     <div class="quarter">
-    <img src="img/FullBody.jpg" alt="fullbody training" style="width:100%;height:203.6px;">
+        <img src="img/FullBody.jpg" alt="fullbody training" class="quarterImg">
     </div>
     <div class="quarter">
-    <img src="img/Strength.jpg" alt="strength training" style="width:100%;height:203.6px;">
+        <img src="img/Strength.jpg" alt="strength training" class="quarterImg">
     </div>
     <div class="quarter">
-    <img src="img/Xfit.jpg" alt="Crossfit training" style="width:100%;height:100%;">
-=======
-    <img src="img/Xfit.jpg" alt="Crossfit training" style="width:100%;height:203.6px;">
->>>>>>> 67a76159442774f7ce6370430e507ba087135f36
+        <img src="img/Xfit.jpg" alt="Crossfit training" class="quarterImg">
     </div>
 </div>
 
