--- a/FrontPage.html
+++ b/FrontPage.html
@@ -19,8 +19,12 @@
         <a class="headerNavText" href="Activities.html">Activities</a>
     </div>
 </div>
-<div class="bodyHalf">
+<div class="bodyHalf" id="Feed">
+    <p id="FeedText">Nullam varius eleifend diam nec imperdiet. Curabitur varius, est nec aliquam sollicitudin, purus sapien finibus arcu, non bibendum tellus ipsum vitae lorem. Mauris pharetra vestibulum turpis, vitae pretium purus porttitor vel. Vestibulum ut quam euismod lectus auctor pellentesque vel at diam. Quisque pretium rutrum urna cursus accumsan. Sed finibus odio magna, quis vulputate odio volutpat a. Quisque ut nisl tempus, pellentesque arcu nec, imperdiet risus.
 
+        Donec congue purus est, at egestas urna pulvinar pharetra. Maecenas vitae est ac sem venenatis dignissim. Nullam ornare libero ut ipsum viverra tincidunt. Integer luctus luctus tortor eget congue. Nulla facilisi. Quisque pretium libero hendrerit finibus pellentesque. Nullam vestibulum erat tincidunt elit pretium convallis. Aenean vehicula erat fermentum ex aliquet dapibus. Morbi non ante eget sapien iaculis interdum ut id lacus. Donec sit amet rutrum leo. Donec non lectus tristique, rutrum ligula id, varius odio. Nunc hendrerit nisl a imperdiet egestas. Mauris lacinia tellus pharetra massa mollis, sed pretium ante placerat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Quisque vitae dui volutpat, pretium felis quis, pretium mauris. Aliquam quis iaculis urna.
+
+        Nullam sodales elit eu est vehicula, a viverra ipsum finibus. Vestibulum ultricies purus et est vehicula consectetur. Praesent id erat tellus. Sed venenatis id lacus ac accumsan. Vivamus nec consectetur enim. Aliquam et erat posuere, pellentesque magna id, imperdiet nulla. Quisque sit amet cursus mi, eleifend aliquet elit. Morbi mollis porttitor metus, ac condimentum nisl interdum et. Maecenas nec est ipsum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras eget est id magna sollicitudin finibus vel quis justo.
 </div>
 
 <div class="bodyHalf">
