--- a/Info.html
+++ b/Info.html
@@ -18,22 +18,22 @@
         <a class="headerNavText" href="Activities.html">Activities</a>
     </div>
 </div>
-<div style="clear: both">
-
-    <h2 style="text-align:center">
+<div class="infoh2">
+    <h2>
         Customer Contact
     </h2>
 </div>
-<p style="text-align: center"> If you have any questions regarding membership, the training program or any proposals
+
+<p id="ptext"> If you have any questions regarding membership, the training program or any proposals
     towards improving our gym please send us an
     <a href="mailto:ViaFit@via.dk" target="_blank">Email</a>
 </p>
 </div>
-<div style="clear: both"><h2 style="text-align: center"> Instructors</h2></div>
+<div class="infoh2"><h2> Instructors</h2></div>
 
 <div id="infoimgdiv">
 
-<img src="img/gymtræner1.jpg" alt="Casper the Gym trainer" style="width: 280px"height="200px">
+    <img src="img/gymtræner1.jpg" alt="Casper the Gym trainer" style="width: 280px" height="200px">
 </div>
 
 <div id="infotextdiv">
@@ -41,7 +41,7 @@
         Casper is one of our most experienced personal trainers. <br> If your interested in some serious weight loss and
         muscle building, you can reach him on <br> <a href="mailto:CasperViafit@via.dk" target="_blank">CasperVIAFIT@Via.dk</a>
         to get a program tailored just for you.
-</p>
+    </p>
 </div>
 <div id="infoimgdiv">
     <img src="img/gymtræner2.jpg" alt="Gym trainer Louise" style="width: 280px" height="200px">
@@ -52,9 +52,8 @@
         Stamina is key when going through any ORC event, so if your planning <br>
         on improving you stats and hitting that new PR! Contact Louise on <br>
         <a href="mailto:LouiseViafit@via.dk" target="_blank">LouiseVIAFIT@Via.dk</a>
-        </p>
+    </p>
 </div>
-
 
 
 <div id="Footer">
