--- a/Activities.html
+++ b/Activities.html
@@ -18,6 +18,7 @@
         <a class="headerNavText" href="Activities.html">Activities</a>
     </div>
 </div>
+<div class = "col-sm-12">
     <table>
         <tr>
             <th></th>
@@ -90,6 +91,7 @@
             <td class="cardio">Cardio</td>
         </tr>
     </table>
+</div>
 
         <div id="Footer">
             <div class="footBox">
