--- a/About.html
+++ b/About.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <title>About</title>
     <link type="text/css" href="Styles.css" rel="stylesheet">
+    <meta name="viewport"content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="css/bootstrap.min.css" type="text/css"rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
+    </script>
+    <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
 <div id="header">
@@ -18,7 +26,9 @@
         <a class="headerNavText" href="Activities.html">Activities</a>
     </div>
 </div>
-<div class="bodyHalf">
+
+<div class=" col-sm-12 col-lg-6">
+
     <div id="aboutdiv">
         <br>
         <h1>About us</h1>
@@ -35,7 +45,8 @@
     </div>
 </div>
 
-<div class="bodyHalf">
+
+<div class=" col-sm-12 col-lg-6">
     <div class="quarter">
         <img src="img/fitnessGym.jpg" alt="the gym inside" style="width:100%;height:203.6px;">
     </div>
@@ -52,6 +63,7 @@
         <img src="img/workoutSchedule.jpg" alt="a schedule for your workout" style="width:100%;height:203.6px;">
     </div>
 </div>
+
 
 
 <div id="Footer">
