--- a/Info.html
+++ b/Info.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <title>Information</title>
     <link type="text/css" href="Styles.css" rel="stylesheet">
+    <meta name="viewport"content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="css/bootstrap.min.css" type="text/css"rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
+    </script>
+    <script src="js/bootstrap.min.js"></script>
 </head>
 <body class="info">
 <div id="header">
